Deck edit ordered by type

--- a/translations/forms.fr.yaml
+++ b/translations/forms.fr.yaml
@@ -3,5 +3,5 @@ Address: Adresse
 Firstname: Prénom
 Lastname: Nom
 Phone: Téléphone
-Postal code: Code postal
+'Postal code': 'Code postal'
 City: Ville
